cabal-version:       >=1.10

name:                4ch50replies
version:             0.0.1
description:         Telegram bot for logging 4chan threads w/ ≥50 repies.
license:             GPL-3
license-file:        LICENSE
author:              Demonstrandum
maintainer:          moi@knutsen.co
category:            bot
build-type:          Simple
extra-source-files:  README.md

executable 4ch50replies
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.14 && <4.15
  default-language:    Haskell2010
